<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_topbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--静止模式-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/still"
                android:src="@mipmap/icon_still"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/still"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_still"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_still_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

                <Switch
                    android:id="@+id/switch_still"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_bg_switch"
                    android:thumb="@android:color/transparent"
                    android:layout_width="55dp"
                    android:layout_height="30dp" />

        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--飞行模式-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/flight"
                android:src="@mipmap/icon_flight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/flight"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_flight_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_flight"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_bg_switch"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="30dp" />

        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--充电模式-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/power"
                android:src="@mipmap/icon_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/power"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_power_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_power"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_bg_switch"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="30dp" />

        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--口袋模式-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/pocket"
                android:src="@mipmap/icon_pocket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/pocket"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_pocket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_pocket_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_pocket"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_bg_switch"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="30dp" />

        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--关机模式-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ShutDown"
                android:src="@mipmap/icon_shutdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/ShutDown"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_ShutDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="1"
                    android:text="@string/funtion_ShutDown_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_ShutDown"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_bg_switch"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="30dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
