<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg_topbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/message_title_content"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:src="@mipmap/icon_picture"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:id="@+id/message_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/message_title"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:id="@+id/message_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/message_time"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    <View
        android:id="@+id/div_title"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_ms"
        android:layout_below="@+id/message_title_content"
        />
     <LinearLayout
         android:id="@+id/share_title"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="60dp">
         <Button
             android:id="@+id/share"
             android:text="@string/message_share"
             android:textSize="20sp"
             android:background="@drawable/selector_bt_bg"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/div_title"
        android:layout_above="@+id/share_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/get_picture"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@mipmap/bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
