<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_topbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--夜间模式-->
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="50dp">
       <RelativeLayout
           android:background="@color/bg_topbar"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:id="@+id/light"
               android:src="@mipmap/icon_night"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:layout_centerVertical="true"
               />
           <LinearLayout
               android:layout_toRightOf="@+id/light"
               android:layout_marginLeft="20dp"
               android:layout_centerVertical="true"
               android:orientation="vertical"
               android:layout_width="180dp"
               android:layout_height="wrap_content">
               <TextView
               android:layout_weight="1"
               android:textSize="@dimen/Text_size"
               android:layout_centerVertical="true"
               android:text="@string/settings_lights_mode"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           </LinearLayout>
           <Switch
               android:id="@+id/switch_light"
               android:layout_alignParentEnd="true"
               android:layout_marginEnd="20dp"
               android:layout_centerVertical="true"
               android:background="@drawable/selector_bg_switch"
               android:thumb="@android:color/transparent"
               android:layout_width="55dp"
               android:layout_height="30dp" />
       </RelativeLayout>
   </LinearLayout>
   <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--报警提示设置-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/prompt"
                android:src="@mipmap/icon_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/prompt"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/Text_size"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_prompt_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView
                android:id="@+id/switch_prompt"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_ms_point"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="50dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--撤销报警密码设置-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/password"
                android:src="@mipmap/icon_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/password"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/Text_size"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_password_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView
                android:id="@+id/switch_password"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_ms_point"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="50dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--软件分享-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/share"
                android:src="@mipmap/icon_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/share"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/Text_size"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_share_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView
                android:id="@+id/switch_share"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_ms_point"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="50dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
    <!--使用说明-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:background="@color/bg_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/description"
                android:src="@mipmap/icon_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <LinearLayout
                android:layout_toRightOf="@+id/description"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="@dimen/Text_size"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_description_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView
                android:id="@+id/switch_description"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/icon_ms_point"
                android:thumb="@android:color/transparent"
                android:layout_width="55dp"
                android:layout_height="50dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_alignParentBottom="true"/>
</LinearLayout>
